package com.fla.aol.inventory.system.order.valueobject;

public enum OrderStatus {
    WAITING_FOR_PAYMENT, PAID, CANCELLED
}
